Bug 820704 - AudioChannelService must handle children quitting unexpectedly. r=jlebar